--- a/Library_late_return_analysis.ipynb
+++ b/Library_late_return_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMd4K2swIa2Hc0dXunkl3rE",
+      "authorship_tag": "ABX9TyMAC56lOJniG37HIb4GmSxB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5662,6 +5662,85 @@
       ],
       "metadata": {
         "id": "Pg9wRli-WWJI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# checking rate of late_returns\n",
+        "df_check['late_return'].value_counts(normalize=True) # gives % of late returns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "id": "eMaRd9qSlm8X",
+        "outputId": "336c185e-1048-4251-f932-d8ed6720b523"
+      },
+      "execution_count": 723,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "late_return\n",
+              "0    0.909028\n",
+              "1    0.090972\n",
+              "Name: proportion, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>proportion</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>late_return</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.909028</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.090972</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 723
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Late return rate: 90% books are returned on time and 9.09% of books are returned late in total**"
+      ],
+      "metadata": {
+        "id": "8pVtSxTTlv9s"
       }
     },
     {
@@ -21747,6 +21826,15 @@
       ],
       "metadata": {
         "id": "x1M0AQrhqIsR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Late return rate: 90% of books are returned on time and 9.09% of books are returned late from EDA findings in checkout dataset**"
+      ],
+      "metadata": {
+        "id": "bSqAnxSqmEKi"
       }
     },
     {
